--- a/sales/templates/sales/sale_detail.html
+++ b/sales/templates/sales/sale_detail.html
@@ -2,13 +2,42 @@
 
 {% block content %}
 
-    <a href="{% url 'sales:sale-list' %}">Go back to list</a>
-    <hr>
-    <h1>This is the details of {{ sale.first_name}}</h1>
-    <p> This persons age: {{sale.age}}</p>
-    <p>The agent responsible for this sale is : {{ sale.agent }}</p>
-    <hr />
-    <a href="{% url 'sales:sale-update' sale.pk %}">Update</a>
-    <a href="{% url 'sales:sale-delete' sale.pk %}">Delete</a>
+
+<section class="text-gray-600 body-font overflow-hidden">
+  <div class="container px-5 py-24 mx-auto">
+    <div class="lg:w-4/5 mx-auto flex flex-wrap">
+      <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+        <h2 class="text-sm title-font text-gray-500 tracking-widest">Sale</h2>
+        <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ sale.first_name }} {{ sale.last_name }}</h1>
+        <div class="flex mb-4">
+          <a href="{% url 'sales:sale-detail' sale.pk  %}" class="flex-grow text-green-500 border-b-2 border-green-500 py-2 text-lg px-1">
+          Overview
+        
+          <a href= "{% url 'sales:sale-update' sale.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">
+          Update
+          </a>
+        </div>
+        <p class="leading-relaxed mb-4">Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam inxigo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean.</p>
+        <div class="flex border-t border-gray-200 py-2">
+          <span class="text-gray-500">Age</span>
+          <span class="ml-auto text-gray-900">{{ sale.age }}</span>
+        </div>
+        <div class="flex border-t border-gray-200 py-2">
+          <span class="text-gray-500">Loaction</span>
+          <span class="ml-auto text-gray-900">blah blah</span>
+        </div>
+        <div class="flex border-t border-b mb-6 border-gray-200 py-2">
+          <span class="text-gray-500">Phone</span>
+          <span class="ml-auto text-gray-900">74536435434</span>
+        </div>
+     
+      </div>
+      <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://dummyimage.com/400x400">
+    </div>
+  </div>
+</section>
+
+
+
 
 {% endblock content%}
